⛵Navigation updates to align more with "mobile app" style and tidying up of CSS/classes to avoid overflow

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -33,3 +33,7 @@ $body-color: #102e19;
         font-size: 35px;
     }
 }
+
+.content-wrapper {
+    padding-bottom: 60px; // Adjust the value to match the height of your navbar
+}
